tests/ui/suggestions/suggest-fn-ptr-for-fn-item-in-fn-ret.stderr
error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
  --> $DIR/suggest-fn-ptr-for-fn-item-in-fn-ret.rs:7:13
   |
LL | fn bar() -> _ { Wrapper(foo) }
   |             ^ not allowed in type signatures
   |
help: replace with the correct return type
   |
LL - fn bar() -> _ { Wrapper(foo) }
LL + fn bar() -> Wrapper<fn()> { Wrapper(foo) }
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0121`.
